Se agregaron anotaciones para swagger
